--- a/sass/modules/_forms.scss
+++ b/sass/modules/_forms.scss
@@ -39,7 +39,7 @@ button {
 	&:focus{
 		outline: none;
 		border: 1px solid $blue;
-		box-shadow: 0 4px 10px -2px transparentize($blue,0.8);
+		box-shadow: 0 4px 10px -2px transparentize($blue,0.8), 0 0 0 1px $blue;
 		@include placeholder {
 			opacity: 0;
 		}
@@ -47,8 +47,8 @@ button {
 
 	&.error{
 		border: 1px solid $orange;
-		background: lighten($orange,40%);
-		box-shadow: 0 4px 10px -2px rgba(255, 35, 0, 0.2);
+		background: #fff3f3;
+		box-shadow: 0 4px 10px -2px rgba(255, 35, 0, 0.2), 0 0 0 1px $orange;
 	}
 
 	&--search {
