--- a/sass/main.scss
+++ b/sass/main.scss
@@ -39,6 +39,13 @@
 @import 'modules/mails';
 @import 'modules/reviews';
 @import 'modules/feedback';
+@import 'modules/big-banner';
+@import 'modules/info-banner';
+@import 'modules/team-slider';
+@import 'modules/history-banner';
+@import 'modules/about-serts';
+@import 'modules/about-benefits';
+@import 'modules/about-geo';
 
 @import 'pages/home';
 @import 'pages/catalog';
