--- a/sass/modules/_buttons.scss
+++ b/sass/modules/_buttons.scss
@@ -89,6 +89,11 @@ button::-moz-focus-inner {
 	}
 }
 
+.btn--white{
+	background: #FFF;
+	color: #000;
+}
+
 .btn--small{
 	font-family: $font;
 	font-size: 12px;
