--- a/sass/modules/_info-banner.scss
+++ b/sass/modules/_info-banner.scss
@@ -25,6 +25,18 @@
 		min-height: initial;
 		padding: $pad-s 20px;
 	}
+	&--mini {
+		min-height: 500px;
+		@include res(xxl) {
+			min-height: 445px;
+		}
+		@include res(l) {
+			min-height: initial;
+		}
+		@include res(m) {
+			min-height: initial;
+		}
+	}
 }
 
 .info-banner__text {
@@ -59,5 +71,34 @@
 		position: relative;
 		flex-shrink: 0;
 		margin-right: $pad-xs;
+	}
+}
+
+.info-banner__badges {
+	display: flex;
+	justify-content: space-between;
+	flex-wrap: wrap;
+	margin-top: $pad-m;
+}
+
+.info-banner__badge {
+	display: flex;
+	align-items: flex-start;
+	justify-content: flex-start;
+	width: 45%;
+	font-size: 12px;
+	@include res(xs) {
+		width: 100%;
+		margin-bottom: $pad-s;
+	}
+	img {
+		margin-top: 5px;
+		margin-right: 15px;
+		@include res(xs) {
+			max-width: 20px;
+		}
+	}
+	.h2 {
+		display: block;
 	}
 }
