--- a/sass/main.scss
+++ b/sass/main.scss
@@ -46,6 +46,11 @@
 @import 'modules/about-serts';
 @import 'modules/about-benefits';
 @import 'modules/about-geo';
+@import 'modules/garant-about';
+@import 'modules/pay-info';
+@import 'modules/contact-info';
+@import 'modules/ya-map';
+@import 'modules/pay-methods';
 
 @import 'pages/home';
 @import 'pages/catalog';
