--- a/sass/modules/_history-banner.scss
+++ b/sass/modules/_history-banner.scss
@@ -23,13 +23,14 @@
 		padding: $pad-l $pad-m;
 	}
 	@include res(xs) {
-		padding: $pad-m $pad-m;
+		padding: $pad-s $pad-s;
 	}
 }
 
 .history-banner__text {
+	max-width: 810px;
 	color: #fff;
-	.h2, .h3 {
+	.h1, .h2, .h3 {
 		margin-bottom: $pad-m;
 		@include res(l) {
 			margin-bottom: $pad-s;
@@ -37,5 +38,10 @@
 		@include res(s) {
 			margin-bottom: $pad-xs;
 		}
+	}
+	.h3 {
+		max-width: 600px;
+		margin-left: auto;
+		margin-right: auto;
 	}
 }
