--- a/sass/modules/_modals.scss
+++ b/sass/modules/_modals.scss
@@ -86,8 +86,7 @@
 		justify-content: center;
 		padding: $pad-xs;
 		@include res(xs){
-			width: 100%;
-			padding: $pad-xxs;
+			display: none;
 		}
 	}
 
@@ -102,7 +101,7 @@
 		}
 		@include res(xs){
 			width: 100%;
-			border-radius: 0 0 15px 15px;
+			border-radius: 15px;
 		}
 	}
 
