--- a/sass/modules/_about-geo.scss
+++ b/sass/modules/_about-geo.scss
@@ -24,7 +24,7 @@
 	img {
 		display: block;
 		max-width: 100%;
-		//transform: translate3d(0,0,0);
+		transform: translate3d(0,0,0);
 		@include res(s) {
 			display: none;
 		}
