--- a/sass/modules/_modals.scss
+++ b/sass/modules/_modals.scss
@@ -62,6 +62,12 @@
 	background: #152748;
 }
 
+.fancybox-loading {
+	border: 4px solid rgba(255,255,255,0.5);
+	border-top-color: $blue;
+	opacity: 1;
+}
+
 .fancybox-close-small,.fancybox-slide--image .fancybox-close-small, .fancybox-slide--video .fancybox-close-small, .fancybox-slide--iframe .fancybox-close-small{
 	@include cross();
 }
