--- a/sass/modules/_history-banner.scss
+++ b/sass/modules/_history-banner.scss
@@ -1,6 +1,7 @@
 .history-banner-sec {}
 
 .history-banner {
+	position: relative;
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -8,7 +9,7 @@
 	padding: $pad-xl $pad-xl;
 	text-align: center;
 	border-radius: 20px;
-	background: url('../img/about/bg-history-banner.jpg') no-repeat center;
+	background: url('../img/about/bg-history-banner.jpg') no-repeat center #291f38;
 	background-size: cover;
 	@include res(xxl) {
 		min-height: 360px;
@@ -25,9 +26,20 @@
 	@include res(xs) {
 		padding: $pad-s $pad-s;
 	}
+
+	#particles-js{
+		position: absolute;
+		top: 0;
+		left: 0;
+		bottom: 0;
+		right: 0;
+		z-index: 1;
+	}
 }
 
 .history-banner__text {
+	position: relative;
+	z-index: 2;
 	max-width: 810px;
 	color: #fff;
 	.h1, .h2, .h3 {
