--- a/sass/main.scss
+++ b/sass/main.scss
@@ -49,8 +49,9 @@
 @import 'modules/garant-about';
 @import 'modules/pay-info';
 @import 'modules/contact-info';
-@import 'modules/ya-map';
 @import 'modules/pay-methods';
+@import 'modules/contact-company';
+@import 'modules/contact-requiz';
 
 @import 'pages/home';
 @import 'pages/catalog';
