--- a/sass/modules/_mails.scss
+++ b/sass/modules/_mails.scss
@@ -5,6 +5,16 @@
 .mails__list {
 	padding-left: $pad-m;
 	padding-right: $pad-m;
+	opacity: 0;
+	height: 0;
+	overflow: hidden;
+	transition: all 0.6s ease;
+
+	&.flickity-enabled{
+		opacity: 1;
+		height: auto;
+		overflow: initial;
+	}
 }
 
 .mails__item {
