--- a/sass/main.scss
+++ b/sass/main.scss
@@ -52,6 +52,7 @@
 @import 'modules/pay-methods';
 @import 'modules/contact-company';
 @import 'modules/contact-requiz';
+@import 'modules/checkout';
 
 @import 'pages/home';
 @import 'pages/catalog';
