--- a/sass/modules/_header.scss
+++ b/sass/modules/_header.scss
@@ -8,17 +8,6 @@
 		padding-top: 40px;
 		padding-bottom: 0;
 	}
-	a {
-		text-decoration: none!important;
-		&:hover {
-			color: $blue;
-		}
-		&[href^="tel"], i {
-			&:hover {
-				color: inherit;
-			}
-		}
-	}
 }
 
 .header__top-wrap {
@@ -70,6 +59,10 @@
 				padding-left: 0;
 			}
 		}
+	}
+
+	&:before,&:after{
+		display: none;
 	}
 }
 
@@ -152,6 +145,10 @@
 	@include res(xs){
 		margin-right: 0;
 	}
+	
+	&:hover{
+		color: #FFF;
+	}
 }
 
 .header__top-call {
@@ -162,10 +159,12 @@
 	color: $blue;
 	border-bottom: 1px dotted transparent;
 	transition: all 0.3s ease;
+	transform: translate3d(0,0,0);
 	@include res(s) {
 		display: none;
 	}
 	&:hover {
+		color: $blue;
 		border-color: $blue;
 	}
 	&--menu {
@@ -183,6 +182,7 @@
 		display: none;
 	}
 	&:hover {
+		color: #FFF;
 		span {
 			color: $blue;
 		}
