--- a/sass/modules/_product-preview.scss
+++ b/sass/modules/_product-preview.scss
@@ -126,7 +126,7 @@
 			padding: 0 6px 6px 6px;
 		}
 
-		.btn--red{
+		.btn--red,a.btn{
 			width: 100%;
 			flex-shrink: 1;
 			padding-left: 5px;
@@ -222,13 +222,23 @@
 			flex-shrink: 0;
 			width: 120px;
 			padding: 10px;
+
 			@include res(xxs){
 				width: 80px;
 			}
 		}
+		.product-labels{
+			left: 10px;
+			text-align: left;
+		}
+
+		.product-label{
+			font-size: 10px;
+		}
 	}
 
 	main{
+		padding: 10px;
 		@include res(xs){
 			flex-shrink: 0;
 			width: calc(100% - 210px);
