--- a/sass/modules/_detail-info.scss
+++ b/sass/modules/_detail-info.scss
@@ -127,6 +127,13 @@
 //comments
 .detail-info__comments{
 	max-width: 600px;
+
+	#vk_comments{
+		@include res(xs){
+			margin: 0 -25px;
+			width: auto !important;
+		}
+	}
 }
 
 .bx_soc_comments_div .bx-catalog-tab-list{
@@ -147,6 +154,10 @@
 		padding-bottom: 6px;
 		padding-left: 20px;
 		padding-right: 20px;
+		@include res(xs){
+			padding-left: 5px;
+			padding-right: 5px;
+		}
 
 		&:hover,&.active{
 			color: #2f7bff;
@@ -162,6 +173,9 @@
 				height: auto;
 				line-height: inherit;
 				bottom: 0;
+				@include res(xs){
+					font-size: 10px;
+				}
 			}
 		}
 
@@ -171,6 +185,9 @@
 			color: inherit;
 			height: auto;
 			line-height: inherit;
+			@include res(xs){
+				font-size: 10px;
+			}
 		}
 	}
 }
