--- a/sass/modules/_product-preview.scss
+++ b/sass/modules/_product-preview.scss
@@ -337,3 +337,29 @@
 	}
 }
 //product-labels
+
+
+//product-status
+.product-status{
+	position: absolute;
+	top: 0;
+	right: 0;
+	background: transparentize($gray-bg,0.05);
+	font-weight: bold;
+	font-size: 12px;
+	padding: 3px 6px;
+	border-radius: 5px 15px 5px 5px;
+	text-align: left;
+	@include res(s){
+		font-size: 10px;
+		padding: 2px 6px 2px 4px;
+	}
+
+	&__date{
+		font-size: 10px;
+		@include res(s){
+			font-size: 8px;
+		}
+	}
+}
+//product-status
