--- a/sass/pages/_catalog-detail.scss
+++ b/sass/pages/_catalog-detail.scss
@@ -127,9 +127,12 @@
 	}
 
 	span{
+		display: block;
 		@extend .small-text;
 		color: $blue;
 		line-height: 1.2;
+		max-width: 150px;
+		flex-shrink: 1;
 	}
 
 	&:hover{
