--- a/sass/modules/_about-serts.scss
+++ b/sass/modules/_about-serts.scss
@@ -1,18 +1,12 @@
 .about-serts-sec {}
 
 .about-serts {
-	a {
+	&__one {
+		user-select: none;
 		display: block;
 		margin-bottom: $pad-m;
 		text-align: center;
-		&:hover {
-			p {
-				border-color: transparent;
-			}
-			span {
-				border-color: $blue;
-			}
-		}
+
 		span {
 			display: flex;
 			align-items: center;
@@ -35,6 +29,7 @@
 				display: block;
 				max-width: 100%;
 				max-height: 100%;
+				user-select: none;
 			}
 		}
 		p {
@@ -45,6 +40,17 @@
 			font-size: 12px;
 			border-bottom: 2px dotted $blue;
 			transition: all 0.3s ease;
+		}
+
+		&.fancy{
+			&:hover {
+				p {
+					border-color: transparent;
+				}
+				span {
+					border-color: $blue;
+				}
+			}
 		}
 	}
 }
