--- a/sass/modules/_header.scss
+++ b/sass/modules/_header.scss
@@ -425,13 +425,13 @@
 	right: 0;
 	max-width: 1600px;
 	width: calc(100% - 40px);
-	padding: 20px 0 0px 0;
+	padding: 20px 0 0 0;
 	border-radius: 15px;
 	opacity: 0;
 	visibility: hidden;
 	background: #fff;
 	transition: all 0.3s ease;
-	z-index: 10;
+	z-index: 200;
 	//overflow: hidden;
 	&.active {
 		opacity: 1;
