--- a/sass/pages/_catalog-detail.scss
+++ b/sass/pages/_catalog-detail.scss
@@ -364,3 +364,13 @@
 	}
 }
 //product-right
+
+.product-slider-wrapper{
+	position: relative;
+}
+
+.product-labels--detail{
+	position: absolute;
+	bottom: 10px;
+	left: 10px;
+}
