--- a/sass/modules/_checkout.scss
+++ b/sass/modules/_checkout.scss
@@ -396,3 +396,19 @@ label{
 		@extend %link-blue;
 	}
 }
+
+#bx-soa-orderSave{
+	.btn.btn-default{
+		display: block;
+		margin: 20px auto 10px auto !important;
+		width: 220px;
+		float: none !important;
+		padding: 15px 30px;
+	}
+
+	.checkbox{
+		margin-left: auto;
+		margin-right: auto;
+		max-width: 440px;
+	}
+}
