--- a/sass/pages/_lk.scss
+++ b/sass/pages/_lk.scss
@@ -173,3 +173,15 @@
 	}
 }
 //history-list
+
+
+//cancel order
+.s-cancel-order{
+
+	textarea{
+		width: 600px;
+		max-width: 100%;
+		height: 100px;
+	}
+}
+//cancel order
